<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="23dp"
    android:layout_marginStart="23dp"
    android:layout_marginEnd="23dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:textColor="@color/blue"
        android:layout_gravity="center_horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:id="@+id/mail"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:id="@+id/Username"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:id="@+id/first_name"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:id="@+id/last_name"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:id="@+id/age"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/dark_black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:inputType="number"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/clear"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:text="@string/clear"
        android:textAllCaps="false"
        android:textColor="@color/dark_black"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/blank_Alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_Alert"
        android:textColor="@color/red"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="11sp"
        android:textStyle="italic" />

</androidx.appcompat.widget.LinearLayoutCompat>